--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,25 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  list-style: none;
+  margin: 156px 100px;
+  padding: 0;
+  justify-content: center;
+}
+
+.gallery-item {
+  flex-basis: calc((100% - 48px) / 3);
+  overflow: hidden;
+}
+
+.gallery-img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  border-radius: 5px;
+}
